<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".TaskForm">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/title_background"
        android:gravity="center"
        android:paddingHorizontal="10pt"
        android:paddingVertical="5pt"
        android:text="@string/task_register"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />

    <EditText
        android:id="@+id/titleTask"
        android:layout_width="216dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="@string/hint_title"
        android:inputType="textPersonName"
        android:paddingHorizontal="5pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.692"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <EditText
        android:id="@+id/priority"
        android:layout_width="216dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="@string/hint_priority"
        android:inputType="textPersonName"
        android:paddingHorizontal="5pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.692"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTask" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="85dp"
        android:layout_height="48dp"
        android:background="@color/blue_secondary"
        android:gravity="center"
        android:text="@string/task_title"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/titleTask"
        app:layout_constraintEnd_toStartOf="@+id/titleTask"
        app:layout_constraintTop_toTopOf="@+id/titleTask" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="85dp"
        android:layout_height="48dp"
        android:background="@color/blue_secondary"
        android:gravity="center"
        android:text="@string/task_priority"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/priority"
        app:layout_constraintEnd_toStartOf="@+id/priority"
        app:layout_constraintTop_toTopOf="@+id/priority" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="85dp"
        android:layout_height="48dp"
        android:background="@color/blue_secondary"
        android:gravity="center"
        android:text="@string/task_executed"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="216dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingHorizontal="5pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.692"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priority"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/radioGroupExecuted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView5">

        <RadioButton
            android:id="@+id/radioNoExecuted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="44dp"
            android:text="@string/no" />

        <RadioButton
            android:id="@+id/radioExecuted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="29dp"
            android:text="@string/yes" />

    </RadioGroup>

    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="301dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:shadowColor="#373737"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

</androidx.constraintlayout.widget.ConstraintLayout>